--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js" integrity="sha384-9Nhn55MVVN0/4OFx7EE5kpFBPsEMZxKTCnA+4fqDmg12eCTqGi6+BB2LjY8brQxJ" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 
-  <title>PALIT | PALIT</title>
+  <title>hahahahah | PALIT</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
 
   <section class="main-content">
     
-  <h1>PALIT</h1>
+    <h1>PALIT</h1>
   <p>Berdasarkan pengamatan kami terhadap saluran pembuangan pabrik yang alirannya cukup deras, kami menemukan sebuah inovasi agar energi dari arus air limbah tersebut tidak terbuang sia-sia, kami membuat sebuah rancangan untuk memanfaatkan aliran air tersebut menjadi sebuah tegangan listrik yang dapat digunakan untuk peralatan elektronik lainnya</p>
 
 <hr />
@@ -60,8 +60,8 @@
 
 
 <figure role="group" aria-describedby="caption-dadf283d503ca66e882780800a698ab3">
-  <a href="https://arifingedhe.github.io/nasa-images/index.png" class="">
-    <img src="https://arifingedhe.github.io/nasa-images/index_hu4860c961037669fc4052753751914838_32195_800x0_resize_box_2.png">
+  <a href="https://arifingedhe.github.io/index.png" class="">
+    <img src="https://arifingedhe.github.io/index_hu4860c961037669fc4052753751914838_32195_800x0_resize_box_2.png">
   </a>
   <figcaption id="caption-dadf283d503ca66e882780800a698ab3">
     Berikut skema yang kami buat.
@@ -74,7 +74,6 @@ Disini kami memiliki ide untuk memanfaatkan arus pembuangan air limbah yang menu
 Kami membuat sebuah alat pengahasil listrik yang berbasis IoT dengan memanfaatkan aliran arus limbah pabrik dimana prinsip kerjanya yaitu air limbah akan masuk ke sebuah bak penampungan, setelah itu air dialirkan melalui pintu dan pipa dibawahnya yang berfungsi untuk menggerakkan turbin yang nantinya akan menghasilkan listrik, setelah itu sensor akan mendeteksi dan mengirimkan sebuah data berisikan jumlah debit air menuju server. Di bak penampungan sendiri terpasang sensor pengukur debit, Arduino sebagai microcontroler, dan motor servo untuk membuka pintu air.<br />
 Jika sensor mendeteksi debit air berada dibatas bawah atau kurang dari batas bawah maka pintu akan membuka 20% dari skala 100% , atau jika sensor mendeteksi debit air berada lebih dari batas bawah maka pintu air yang menuju ke turbin akan terbuka 100%. Setelah itu air akan mengalir ke pipa yang mampu menggerakkan turbin dan generator. Turbin mengubah air menjadi energi gerak dan generator akan mengahasilkan energi listrik. Sebelum arus listrik yang dihasilkan menuju ke travo terdapat sebuah sensor untuk mendeteksi berapa jumlah arus tegangan yang dihasilkan dan nantinya data tersebut akan dikirim melalui Arduino dengan media wifi ke server. Travo akan mengirim energi listrik antara dua sirkuit dengan induksi elektromagnetik melalui transmission line dan disimpan di sebuah baterai.<br />
 Setelah itu listrik yang dihasilkan generator akan menuju ke MCB, dimana MCB juga akan mendapat tegangan listrik dari PLN. MCB akan dilengkapi dengan microcontroler Arduino dan switching yang berfungsi untuk membuat logic dan mengirimkan data server. Data yang dikirimkan Arduino ke server melalui berisikan jumlah arus/tegangan dalam baterai dan sumber tegangan mana yang akan digunakan. Logic yang dibuat yaitu jika tegangan yang disimpan dalam baterai kurang dari kebutuhan yang telah ditentukan, maka sumber listrik akan dirubah ke tegangan listrik PLN. Namun jika arus listrik yang disimpan di dalam baterai mencukupi kebutuhan maka sumber tegangan dari PLN dimatikan. Setelah itu MCB akan meneruskan arus listrik ke peralatan elektronik lainnya seperti tv, lampu, komputer, dll.</p>
-
 
     <footer class="site-footer">
   <span class="site-footer-credits">
