--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </figure>
 
 
-<p>Selama ini air limbah diolah kembali untuk dijadikan ramah lingkungan.
+<p style="text-align:justify">Selama ini air limbah diolah kembali untuk dijadikan ramah lingkungan.
 Disini kami memiliki ide untuk memanfaatkan arus pembuangan air limbah yang menuju ke proses pengolahan dengan memanfaatkan teknologi IoT.
 Kami membuat sebuah alat pengahasil listrik yang berbasis IoT dengan memanfaatkan aliran arus limbah pabrik dimana prinsip kerjanya yaitu air limbah akan masuk ke sebuah bak penampungan, setelah itu air dialirkan melalui pintu dan pipa dibawahnya yang berfungsi untuk menggerakkan turbin yang nantinya akan menghasilkan listrik, setelah itu sensor akan mendeteksi dan mengirimkan sebuah data berisikan jumlah debit air menuju server. Di bak penampungan sendiri terpasang sensor pengukur debit, Arduino sebagai microcontroler, dan motor servo untuk membuka pintu air.<br />
 Jika sensor mendeteksi debit air berada dibatas bawah atau kurang dari batas bawah maka pintu akan membuka 20% dari skala 100% , atau jika sensor mendeteksi debit air berada lebih dari batas bawah maka pintu air yang menuju ke turbin akan terbuka 100%. Setelah itu air akan mengalir ke pipa yang mampu menggerakkan turbin dan generator. Turbin mengubah air menjadi energi gerak dan generator akan mengahasilkan energi listrik. Sebelum arus listrik yang dihasilkan menuju ke travo terdapat sebuah sensor untuk mendeteksi berapa jumlah arus tegangan yang dihasilkan dan nantinya data tersebut akan dikirim melalui Arduino dengan media wifi ke server. Travo akan mengirim energi listrik antara dua sirkuit dengan induksi elektromagnetik melalui transmission line dan disimpan di sebuah baterai.<br />
