--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <section class="main-content">
     
     <h1>PALIT</h1>
-  <p>Berdasarkan pengamatan kami terhadap saluran pembuangan pabrik yang alirannya cukup deras, kami menemukan sebuah inovasi agar energi dari arus air limbah tersebut tidak terbuang sia-sia, kami membuat sebuah rancangan untuk memanfaatkan aliran air tersebut menjadi sebuah tegangan listrik yang dapat digunakan untuk peralatan elektronik lainnya</p>
+  <div style=’text-align:justify;’>Berdasarkan pengamatan kami terhadap saluran pembuangan pabrik yang alirannya cukup deras, kami menemukan sebuah inovasi agar energi dari arus air limbah tersebut tidak terbuang sia-sia, kami membuat sebuah rancangan untuk memanfaatkan aliran air tersebut menjadi sebuah tegangan listrik yang dapat digunakan untuk peralatan elektronik lainnya</div>
 
 <hr />
 
