--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
 
 <figure role="group" aria-describedby="caption-dadf283d503ca66e882780800a698ab3">
-  <a href="https://arifingedhe.github.io/index.png" class="">
-    <img src="https://arifingedhe.github.io/index_hu4860c961037669fc4052753751914838_32195_800x0_resize_box_2.png">
+  <a href="https://arifingedhe.github.io/designpalit3.png" class="">
+    <img src="https://raw.githubusercontent.com/arifingedhe/arifingedhe.github.io/master/designpalit3.png">
   </a>
   <figcaption id="caption-dadf283d503ca66e882780800a698ab3">
     Berikut skema yang kami buat.
