--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     PALIT
   </h1>
   <h2 class="project-tagline">
-    Pembangkit Listrik Air Limbah Berbasis IoT Dengan Module NB-IOT
+    Pembangkit Listrik Air Limbah Berbasis IOT Dengan Module NB-IOT
   </h2>
   <nav>
     
